Add  some table names and modify database configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,12 +3,13 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.hibernate.ddl-auto=update
 
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=studydemos
-spring.datasource.username=sa
-spring.datasource.password=P@ssw0rd
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=studydemos;integratedSecurity=true
+#spring.datasource.username=sa
+#spring.datasource.password=P@ssw0rd
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 
+#spring.jpa.hibernate.ddl-auto=create-drop
 
 ## MULTIPART (MultipartProperties)
 # Enable multipart uploads
