--- a/pom.xml
+++ b/pom.xml
@@ -41,20 +41,20 @@
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>1.18.6</version>
-            <scope>provided</scope>
-        </dependency>
-
-
         <!--<dependency>-->
             <!--<groupId>org.projectlombok</groupId>-->
             <!--<artifactId>lombok</artifactId>-->
-            <!--&lt;!&ndash;<version>1.18.10</version>&ndash;&gt;-->
+            <!--<version>1.18.6</version>-->
             <!--<scope>provided</scope>-->
         <!--</dependency>-->
+
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.10</version>
+            <scope>provided</scope>
+        </dependency>
 
         <dependency>
         	<groupId>org.springframework.boot</groupId>
