--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,13 @@
         	<optional>true</optional>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/javax.jms/javax.jms-api -->
+        <dependency>
+            <groupId>javax.jms</groupId>
+            <artifactId>javax.jms-api</artifactId>
+            <version>2.0.1</version>
+        </dependency>
+
 
     </dependencies>
 
